--- a/nextjs-smartcontract-lottery-fcc/styles/globals.css
+++ b/nextjs-smartcontract-lottery-fcc/styles/globals.css
@@ -1,26 +1,29 @@
-html,
+/* adding tailwind directives to global css file */
+/* this makes global CSS file usees tailwind */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
+    background: linear-gradient(90deg, #3cc4fa, #fc35f6);
+    background-size: 100% 100%;
+    animation: gradient 4s ease infinite reverse;
+    height: 100vh;
     color: white;
-    background: black;
-  }
+}
+
+.Home_container__bCOhY {
+    padding: 0px;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
